# jma-scraper-observed

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml
src/: bigquery_client.py  config.py  download_history.py  locations.toml  main.py  models.py  scraper.py
tests/: test_bigquery_client.py  test_config.py  test_download_history.py  test_main.py  test_models.py  test_scraper.py
