[project]
name = "life-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-cloud-bigquery>=3.40.1",
    "jedi>=0.19.2",
    "lxml>=6.0.2",
    "pandas>=3.0.1",
    "pandas-gbq>=0.34.0",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
