[project]
name = "life-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-cloud-bigquery>=3.40.1",
    "jedi>=0.19.2",
    "lxml>=6.0.2",
    "pandas>=3.0.1",
    "pandas-gbq>=0.34.0",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.5",
]

[tool.ruff]
target-version = "py314"
line-length = 79

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "RUF001",  # 日本語全角文字（意図的な使用）
    "RUF002",  # 日本語全角文字（docstring）
    "RUF003",  # 日本語全角文字（コメント）
]

[tool.ruff.lint.isort]
known-first-party = ["main"]

[tool.ruff.format]
docstring-code-line-length = 72

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
